crates/arity-parser/tests/snapshots/parser_snapshots__function_formal_string_name_diagnostics.snap
---
source: crates/arity-parser/tests/parser_snapshots.rs
expression: "format!(\"{:#?}\", output.diagnostics)"
---
[
    ParseDiagnostic {
        message: "expected a function parameter name",
        start: 9,
        end: 14,
    },
    ParseDiagnostic {
        message: "expected a function parameter name",
        start: 31,
        end: 32,
    },
    ParseDiagnostic {
        message: "expected a function parameter name",
        start: 45,
        end: 49,
    },
]
