crates/arity-parser/tests/snapshots/parser_snapshots__function_missing_rparen_body_diagnostics.snap
---
source: tests/parser_snapshots.rs
expression: "format!(\"{:#?}\", output.diagnostics)"
---
[
    ParseDiagnostic {
        message: "expected ')' after function parameters",
        start: 0,
        end: 8,
    },
]
