crates/arity-parser/tests/snapshots/parser_snapshots__function_param_default_expr_cst.snap
---
source: tests/parser_snapshots.rs
expression: tree
---
ROOT@0..122
  FUNCTION_EXPR@0..34
    FUNCTION_KW@0..8 "function"
    LPAREN@8..9 "("
    IDENT@9..10 "a"
    WHITESPACE@10..11 " "
    ASSIGN_EQ@11..12 "="
    WHITESPACE@12..13 " "
    IF_EXPR@13..28
      IF_KW@13..15 "if"
      WHITESPACE@15..16 " "
      LPAREN@16..17 "("
      IDENT@17..18 "c"
      RPAREN@18..19 ")"
      WHITESPACE@19..20 " "
      INT@20..21 "1"
      WHITESPACE@21..22 " "
      ELSE_KW@22..26 "else"
      WHITESPACE@26..27 " "
      INT@27..28 "2"
    RPAREN@28..29 ")"
    WHITESPACE@29..30 " "
    IDENT@30..34 "NULL"
  NEWLINE@34..35 "\n"
  FUNCTION_EXPR@35..72
    FUNCTION_KW@35..43 "function"
    LPAREN@43..44 "("
    IDENT@44..45 "a"
    WHITESPACE@45..46 " "
    ASSIGN_EQ@46..47 "="
    WHITESPACE@47..48 " "
    CALL_EXPR@48..55
      IDENT@48..49 "g"
      LPAREN@49..50 "("
      ARG_LIST@50..54
        ARG@50..51
          INT@50..51 "1"
        COMMA@51..52 ","
        WHITESPACE@52..53 " "
        ARG@53..54
          INT@53..54 "2"
      RPAREN@54..55 ")"
    COMMA@55..56 ","
    WHITESPACE@56..57 " "
    IDENT@57..58 "b"
    WHITESPACE@58..59 " "
    ASSIGN_EQ@59..60 "="
    WHITESPACE@60..61 " "
    BINARY_EXPR@61..66
      IDENT@61..62 "x"
      WHITESPACE@62..63 " "
      PLUS@63..64 "+"
      WHITESPACE@64..65 " "
      INT@65..66 "1"
    RPAREN@66..67 ")"
    WHITESPACE@67..68 " "
    IDENT@68..72 "NULL"
  NEWLINE@72..73 "\n"
  FUNCTION_EXPR@73..97
    FUNCTION_KW@73..81 "function"
    LPAREN@81..82 "("
    IDENT@82..83 "a"
    WHITESPACE@83..84 " "
    ASSIGN_EQ@84..85 "="
    WHITESPACE@85..86 " "
    BLOCK_EXPR@86..91
      LBRACE@86..87 "{"
      WHITESPACE@87..88 " "
      IDENT@88..89 "x"
      WHITESPACE@89..90 " "
      RBRACE@90..91 "}"
    RPAREN@91..92 ")"
    WHITESPACE@92..93 " "
    IDENT@93..97 "NULL"
  NEWLINE@97..98 "\n"
  FUNCTION_EXPR@98..121
    FUNCTION_KW@98..106 "function"
    LPAREN@106..107 "("
    IDENT@107..108 "a"
    WHITESPACE@108..109 " "
    ASSIGN_EQ@109..110 "="
    WHITESPACE@110..111 " "
    INT@111..112 "1"
    COMMA@112..113 ","
    WHITESPACE@113..114 " "
    IDENT@114..115 "b"
    RPAREN@115..116 ")"
    WHITESPACE@116..117 " "
    IDENT@117..121 "NULL"
  NEWLINE@121..122 "\n"
